--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   },
   "dependencies": {
     "hexo": "^5.0.0",
+    "hexo-asset-image": "^1.0.0",
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-permalink-pinyin": "^1.1.0",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-markdown": "^1.3.0",
     "hexo-renderer-stylus": "^2.0.0",
